# GTK-for-Windows-Runtime-Environment-Installer

./: .gitignore  README.md
.github/: FUNDING.yml
gtk-nsis-pack/: copy-msys2-files.sh  gtk2-runtime.ts.nsi  gtk3-runtime.ts.nsi  license.txt  nsi_pathpage.ini
gtk-nsis-pack/etc/fonts/: fonts.conf
gtk-nsis-pack/etc/gtk-3.0/: settings.ini
gtk-nsis-pack/lib/girepository-1.0/: AppStreamGlib-1.0.typelib  Atk-1.0.typelib  DBus-1.0.typelib  DBusGLib-1.0.typelib  Dazzle-1.0.typelib  GDesktopEnums-3.0.typelib  GIRepository-2.0.typelib  GL-1.0.typelib  GLib-2.0.typelib  GModule-2.0.typelib  GObject-2.0.typelib  Gdk-2.0.typelib  Gdk-3.0.typelib  Gdk-4.0.typelib  GdkPixbuf-2.0.typelib  GdkPixdata-2.0.typelib  GdkWin32-2.0.typelib  GdkWin32-3.0.typelib  Gee-0.8.typelib  Ggit-1.0.typelib  Gio-2.0.typelib  Gitg-1.0.typelib  GitgExt-1.0.typelib  Gladeui-2.0.typelib  Graphene-1.0.typelib  Gsk-4.0.typelib  Gspell-1.typelib  Gst-1.0.typelib  GstAllocators-1.0.typelib  GstApp-1.0.typelib  GstAudio-1.0.typelib  GstBadAudio-1.0.typelib  GstBase-1.0.typelib  GstCheck-1.0.typelib  GstCodecs-1.0.typelib  GstController-1.0.typelib  GstGL-1.0.typelib  GstInsertBin-1.0.typelib  GstMpegts-1.0.typelib  GstNet-1.0.typelib  (+42 more)
gtk2_prefs/trunk/gtk2_prefs/: AUTHORS  ChangeLog  README  autogen.sh  configure.in  gtk2_prefs.kdevelop  gtk2_prefs.spec.in
gtk2_prefs/trunk/gtk2_prefs/src/: Makefile.am  gtk2_prefs.glade  gtk2_prefs.gladep  interface.cpp  main.cpp  main.h  support.cpp  sys_win32.h  win32util.cpp  win32util.h
test/: hello-world-gtk.cpp  hello-world-gtk.h  main-gtk.cpp
(+3251 files in other folders)
