bin_PROGRAMS = gtk2_prefs


# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
gtk2_prefs_LDFLAGS = $(all_libraries) 
gtk2_prefs_SOURCES = callbacks.cpp interface.cpp main.cpp support.cpp \
	win32util.cpp
noinst_HEADERS = callbacks.h interface.h main.h support.h win32util.h
